# Acme-Manipulator-IK-Solver

./: CMakeLists.txt  readme.md
.github/workflows/: build_and_coveralls.yml
NumCpp/: CMakeLists.txt
app/: CMakeLists.txt  Controller.cpp  PositionFK.cpp  Robot  Robot.cpp  Simulator.cpp  VelocityIK.cpp  main.cpp
cmake/: CodeCoverage.cmake
docs/: Doxyfile
docs/html/: _8ycm__extra__conf_8py_source.html  ____init_____8py_source.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _controller_8cpp.html  _controller_8cpp__incl.map  _controller_8cpp__incl.md5  _controller_8cpp_source.html  _controller_8hpp.html  _controller_8hpp__dep__incl.map  _controller_8hpp__dep__incl.md5  _controller_8hpp__incl.map  _controller_8hpp__incl.md5  _controller_8hpp_source.html  _kinematics_8hpp.html  _kinematics_8hpp__dep__incl.map  _kinematics_8hpp__dep__incl.md5  _kinematics_8hpp__incl.map  _kinematics_8hpp__incl.md5  _kinematics_8hpp_source.html  _position_f_k_8cpp.html  _position_f_k_8cpp.js  _position_f_k_8cpp__incl.map  _position_f_k_8cpp__incl.md5  _position_f_k_8cpp_source.html  _position_f_k_8hpp.html  _position_f_k_8hpp__dep__incl.map  _position_f_k_8hpp__dep__incl.md5  _position_f_k_8hpp__incl.map  _position_f_k_8hpp__incl.md5  _position_f_k_8hpp_source.html  _robot_8cpp.html  _robot_8cpp.js  _robot_8cpp__incl.map  _robot_8cpp__incl.md5  (+3576 more)
include/: Controller.hpp  Kinematics.hpp  PositionFK.hpp  Robot.hpp  Simulator.hpp  VelocityIK.hpp
results/: cppcheck.txt  cpplint.txt  valgrind_result.txt
test/: CMakeLists.txt  main.cpp  test.cpp
(+1300 files in other folders)
